# DigitOS

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
project0/: Makefile  README.shell  commands.c  commands.h  evaluate.c  evaluate.h  fib  fib.c  handle  handle.c  mykill  mykill.c  read.c  read.h  shared.c  shared.h  shell_design.txt  utcsh  utcsh.c  util.c
